# support-ticket-classification

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  download_data.py  install.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: azure_conf.yml  azure_run_train.py  azure_store_data.py  azure_train.py  azure_utils.py  model.py  train.py  utils.py
tests/: test_api.py  test_download.py  test_model.py  test_utils.py
tests/fixtures/: sample_tickets.csv
